--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3-Architect-Responsive Website</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="work-sans-font">
     <header>
-
+        <nav class="navbar">
+            <h1>G3 Architects</h1>
+        </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
