--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
     </header>
     <main>
+        <!-- team section start -->
         <section class="team-container display-flex align-center gap">
             <div class="team-pic-container">
                 <img src="images/team1.png" alt="">
@@ -39,11 +40,45 @@
                 <img src="images/team4.png"alt="">
             </div>
             <div class="margin-left">
-                <h1>Quick list of Our Features</h1>
-                <p>
+                <h1 class="quick-list-features"><span class="text-light-gray">Quick list</span> <b>of Our</b> <span class="features-color">Features</span></h1>
+                <p class="text-light-gray">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
                 <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+
+        <!-- features you will love -->
+        <section>
+
+        </section>
+        <!-- some facts -->
+        <section>
+            <h1 class="quick-list-features">Some Facts</h1>
+            <p class="text-light-gray">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+            </p>
+            <div class="facts-container">
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
             </div>
         </section>
 
