--- a/index.html
+++ b/index.html
@@ -49,8 +49,56 @@
         </section>
 
         <!-- features you will love -->
-        <section>
+        <section class="facts-content">
+            <div>
+                <h1 id="feature-section-title" class="quick-list-features">Features you will <br>love & enjoy</h1>
+                <p class="text-light-gray">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <!-- feature card container -->
 
+                 <div class="display-flex features-will-love">
+                    <div>
+                    
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+
+                </div>
+            </div>
+           
+            <div class="featured-img">
+                <img src="images/architect.png" alt="">
+                <button class="btn-primary" id="experience-badge">
+                    <span id="experience-year">10+Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+        </div>
         </section>
         <!-- some facts -->
         <section class="facts-content">
@@ -108,8 +156,12 @@
         </section>
 
     </main>
-    <footer>
-
+    <footer class="facts-content bg-footer-color">
+        <div>
+            <p>
+                All rights reserved copyright@2023 startup landing page design
+            </p>
+        </div>
     </footer>
 </body>
 </html>
