--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div>
                 <h1 id="feature-section-title" class="quick-list-features">Features you will <br>love & enjoy</h1>
                 <p class="text-light-gray">
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
                 <!-- feature card container -->
 
