--- a/index.html
+++ b/index.html
@@ -106,29 +106,29 @@
             <p class="text-light-gray fact-description">
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
             </p>
-            <div class="facts-container">
-                <div class="fact-card display-flex">
-                    <div>
+            <div class="facts-container display-flex">
+                
+                    <div class="fact-card">
                         <img src="images/icons/ribon.png" alt="" class="fact-icon">
                     <h4 class="fact-number">54</h4>
                     <h5 class="fact-name text-light-gray">Awards Winnnings</h5>
                     </div>
-                </div>
-                <div class="fact-card display-flex">
+                
+                <div class="fact-card">
                     <div>
                         <img src="images/icons/projects.png" alt="" class="fact-icon">
                     <h4 class="fact-number">1458</h4>
                     <h5 class="fact-name text-light-gray">Project Finished</h5>
                     </div>
                 </div>
-                <div class="fact-card display-flex">
+                <div class="fact-card">
                     <div>
                         <img src="images/icons/customers.png" alt="" class="fact-icon">
                     <h4 class="fact-number">590</h4>
                     <h5 class="fact-name text-light-gray">Clients Worked</h5>
                     </div>
                 </div>
-                <div class="fact-card display-flex">
+                <div class="fact-card">
                     <div>
                         <img src="images/icons/email.png" alt="" class="fact-icon">
                     <h4 class="fact-number">22578</h4>
@@ -139,7 +139,7 @@
         </section>
         <section class="our-sponsors">
             <div class="sponsor-info">
-                <h1>Our Sponspors</h1>
+                <h1>Our Sponsors</h1>
                 <p class="text-light-gray">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
                 </p>
